--- a/app/src/main/res/layout/list_fitness_data.xml
+++ b/app/src/main/res/layout/list_fitness_data.xml
@@ -6,13 +6,10 @@
     android:gravity="center_vertical"
     android:minHeight="?android:attr/listPreferredItemHeight"
     android:orientation="horizontal">
-
     <TextView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:minHeight="?android:attr/listPreferredItemHeight"
         android:gravity="center_vertical"
-        android:id="@+id/list_item_textview"
-        android:text="TEST"/>
-
+        android:id="@+id/list_item_textview"/>
 </LinearLayout>
